--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@emailjs/browser": "^4.4.1",
+    "@material-tailwind/react": "^2.1.10",
+    "@vitejs/plugin-react": "^4.3.3",
+    "aos": "^2.3.4",
+    "axios": "^1.7.7",
+    "boxicons": "^2.1.4",
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^5.0.0-beta.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.26.0",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -22,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "sass-embedded": "^1.85.1",
     "vite": "^6.2.0"
   }
 }
