--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@material-tailwind/react": "^2.1.10",
+    "@shadcn/ui": "^0.0.4",
     "@vitejs/plugin-react": "^4.3.3",
     "aos": "^2.3.4",
-    "axios": "^1.7.7",
+    "axios": "^1.8.3",
     "boxicons": "^2.1.4",
+    "depcheck": "^1.4.7",
+    "framer-motion": "^12.5.0",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.14",
     "react": "^18.3.1",
@@ -35,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "sass-embedded": "^1.85.1",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   }
 }
