--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.0",
+    "react-scroll": "^1.9.3",
+    "styled-components": "^6.1.15",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
