--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.0",
     "react-scroll": "^1.9.3",
+    "saas": "^1.0.0",
     "styled-components": "^6.1.15",
     "swiper": "^11.1.9"
   },
