--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@material-tailwind/react": "^2.1.10",
     "@shadcn/ui": "^0.0.4",
     "@vitejs/plugin-react": "^4.3.3",
