--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-node_modules
+# dependencies
+/node_modules
+package-lock.json
+
+
+# production build
+/dist
+/build
+
+# IDEs and editors
+.vscode/
+.idea/
+
+# optional cache
+.cache/
