--- a/package.json
+++ b/package.json
@@ -13,40 +13,26 @@
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@material-tailwind/react": "^2.1.10",
-    "@shadcn/ui": "^0.0.4",
     "@vitejs/plugin-react": "^4.3.3",
-    "aos": "^2.3.4",
-    "axios": "^1.8.3",
     "boxicons": "^2.1.4",
-    "depcheck": "^1.4.7",
     "framer-motion": "^12.5.0",
-    "gsap": "^3.12.5",
-    "locomotive-scroll": "^5.0.0-beta.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.0",
     "react-scroll": "^1.9.3",
-    "saas": "^1.0.0",
-    "styled-components": "^6.1.15",
-    "swiper": "^11.1.9"
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "sass-embedded": "^1.85.1",
-    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   }
 }
