--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /node_modules
 package-lock.json
 
-
 # production build
 /dist
 /build
@@ -13,3 +12,4 @@ package-lock.json
 
 # optional cache
 .cache/
+.vercel
