--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "react-snap",
     "lint": "eslint .",
     "preview": "vite preview"
+  },
+  "reactSnap": {
+    "include": [
+      "/",
+      "/about",
+      "/courses",
+      "/contact"
+    ],
+    "source": "dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -32,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "react-snap": "^1.23.0",
     "sass-embedded": "^1.85.1",
     "vite": "^6.2.0"
   }
