--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@vitejs/plugin-react": "^4.3.3",
     "boxicons": "^2.1.4",
+    "chrome-aws-lambda": "^10.1.0",
     "framer-motion": "^12.5.0",
+    "puppeteer-core": "^24.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
