--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@sparticuz/chrome-aws-lambda": "^17.1.3",
     "@vitejs/plugin-react": "^4.3.3",
     "boxicons": "^2.1.4",
-    "chrome-aws-lambda": "^10.1.0",
     "framer-motion": "^12.5.0",
-    "puppeteer-core": "^24.17.0",
+    "puppeteer-core": "^17.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -44,7 +44,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "react-snap": "^1.23.0",
+    "react-snap": "^1.13.1",
     "sass-embedded": "^1.85.1",
     "vite": "^6.2.0"
   }
