--- a/package.json
+++ b/package.json
@@ -19,31 +19,28 @@
     "source": "dist"
   },
   "dependencies": {
+    "@dr.pogodin/react-helmet": "^3.0.2",
     "@emailjs/browser": "^4.4.1",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@sparticuz/chrome-aws-lambda": "^17.1.3",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^3.0.0",
     "boxicons": "^2.1.4",
-    "framer-motion": "^12.5.0",
-    "puppeteer-core": "^17.1.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5",
+    "framer-motion": "^12.23.12",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^7.8.2",
     "react-scroll": "^1.9.3",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "sass-embedded": "^1.85.1",
-    "vite": "^6.2.0"
+    "@eslint/js": "^9.34.0",
+    "@vitejs/plugin-react": "^5.0.1",
+    "eslint": "^9.34.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "sass-embedded": "^1.90.0",
+    "vite": "^7.1.3"
   }
 }
